# python-2026

./: .gitignore  README.md  pyproject.toml
python_2026/: common.py
python_2026/asynk/: a.py  async_data_pull.py
python_2026/data_storage/: a.py  basics.py  complex_fields.py  instance_to_str_and_dict.py  messages.jsonl  support.json
python_2026/dictz/: a.py  b.py  mem.py  perf.py
python_2026/gg1/: a.py  acc_generator.py  acc_integrator.py  game1.py  list_functions.py  matma.cc  matma.py  sum_avg.py  summary_1.py  utils.py  zz.py
python_2026/gg1/week6/: airplane_sensor_dilemma.py  count_empty_spaces.py
python_2026/grafs/: basics.py  mid.py
python_2026/importz/: bad_actor.py  program.py  repo.py  utils.py
python_2026/libs/: fake_it.py
python_2026/timezz/: a.py  intervals.py  test_intervals.py
python_2026/webapp/: web_app.py
python_2026/welcome2026/: a.py  perf_sort.py  s.py  test_aa.py
tests/: test_calculator.py  test_sum_avg.py
