[tool.poetry]
name = "python-2026"
version = "0.1.0"
description = ""
authors = ["Piotr Marecki <pmarecki@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
faker = "^40.1.2"
pydantic = "^2.12.5"
fastapi = "^0.128.0"
uvicorn = {extras = ["standard"], version = "^0.40.0"}


[tool.poetry.group.dev.dependencies]
pytest = "^9.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
